--- a/src/app/parcels/album/camera/camera.page.html
+++ b/src/app/parcels/album/camera/camera.page.html
@@ -1,9 +1,10 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>camera</ion-title>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-title>Camera</ion-title>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="/parcels/tabs/album"></ion-back-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
-</ion-content>
+<ion-content> </ion-content>
