--- a/src/app/parcels/map/map.page.html
+++ b/src/app/parcels/map/map.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
     <ion-toolbar color="primary">
-        <ion-title size="large" class="ion-margin"> <h1>Ionic Leaflet Map</h1> </ion-title>
+        <ion-title size="large" class="ion-margin"> Ionic Leaflet Map</ion-title>
     </ion-toolbar>
 </ion-header>
 
