--- a/src/app/parcels/parcels.page.html
+++ b/src/app/parcels/parcels.page.html
@@ -1,13 +1,13 @@
 <ion-tabs>
     <ion-tab-bar slot="bottom">
         <ion-tab-button tab="map">
-            <ion-icon name="map" size="large"></ion-icon>
-            <ion-label><h2>Map</h2></ion-label>
+            <ion-icon name="map"></ion-icon>
+            <ion-label>Map</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="album">
-            <ion-icon name="camera" size="large"></ion-icon>
-            <ion-label><h2>Photos</h2></ion-label>
+            <ion-icon name="camera"></ion-icon>
+            <ion-label>Photos</ion-label>
             <ion-badge>6</ion-badge>
         </ion-tab-button>
     </ion-tab-bar>
